[package]
name = "dla"
version = "0.1.0"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
#build = "build.rs"


[dependencies]
time = "0.1"
rand = "0.3"
itertools = "0.5"
newtype-ops = "0.1.3"
libc = "0.2"
nalgebra = "0.10"

[dependencies.ncg_min]
git = "https://github.com/rekka/ncg_min"

[dependencies.homogenous]
git = "file:///home/lampam/cpp/other/rust/homogenous"

[dependencies.dla_sys]
git = "file:///home/lampam/asd/class/research/dla-sys"
