[package]
name = "dla"
version = "0.1.0"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]

[dependencies]
time = "0.1"
rand = "0.3"
itertools = "0.5"
num = "*"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.homogenous]
git = "file:///home/lampam/cpp/other/rust/homogenous"
